Fixed text overflow

--- a/css/scr.css
+++ b/css/scr.css
@@ -50,10 +50,8 @@ ol {
 
 .container article {
     position: relative;
-    height: 100%;
-    bottom: 0;
     padding: 20px;
-    height: 100%;
+    min-height: 100%;
 }
 
 .container article:before {
